# breakdown

./: .breakpad.sh  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
src/: breakdown.cpp  breakdown.h  breakdown.pc.in  main.cpp
tests/: report-Linux-2f5d2700-d191-9876-430fd7b8-3825119e.dmp  report-Linux-2f5d2700-d191-9876-430fd7b8-3825119e.txt  report-Windows-44de0072-5ed8-49aa-9fd1-5f24b1c76acb.dmp  report-Windows-44de0072-5ed8-49aa-9fd1-5f24b1c76acb.txt  run.sh
